<resources>
    <string name="app_name">My Application</string>


    <string name="country">Russian</string>
    <string name="rating">4.5</string>
    <string name="location">UK</string>
    <string name="hours">3 hr</string>
    <string name="job_title">Engineer</string>
    <string name="profile_name">Ahmed hassan</string>
    <string name="last_seen">5 days ago</string>
    <string name="review_count">(150 Reviews)</string>
</resources>